# Rust-morse-trainer

./: Cargo.toml  README.md  build
src/: main.rs  morse.rs
